# hx_ptoject

./: README.md
Battery/app/: build.gradle
BeautifulRefreshLayout-master/app/: build.gradle
BeautifulRefreshLayout-master/beautifulrefreshlibrary/: build.gradle
BigImage/app/: build.gradle
Daemon/app/: build.gradle
Daemon/process/: build.gradle
FFmpeg/app/: CMakeLists.txt  build.gradle
FFmpegDemo/app/: CMakeLists.txt  build.gradle
FixFramework/app/: build.gradle
ProxyGuard/app/: build.gradle
ProxyGuard/proxy-guard-core/: build.gradle
YWProject/: build.gradle  config.gradle  debug.keystore  gradle.properties  local.properties  mvp.jks  runApp.bat  settings.gradle
YWProject/DynamicButton/: build.gradle
YWProject/Pinyin4Search/: build.gradle
YWProject/aop_aspect/: build.gradle
YWProject/dn_waveview/: build.gradle
YWProject/letterbar/: build.gradle
YWProject/mvp/: build.gradle  proguard-rules.pro  日志.md
YWProject/patterns/: build.gradle
YWProject/pinyin4/: build.gradle
YWProject/protobuf/: build.gradle
android-BluetoothLeGatt-master/: local.properties
bitmap/app/: CMakeLists.txt  build.gradle
bitmap/app/src/androidTest/java/com/dongnao/bitmapcompress/: ExampleInstrumentedTest.java
bitmap/app/src/main/: AndroidManifest.xml
bitmap/app/src/main/cpp/: native-copy.cpp  native-lib.cpp  native_copy2.cpp
bitmap/app/src/main/java/com/dongnao/bitmapcompress/: MainActivity.java
bitmap/app/src/main/res/layout/: activity_main.xml
bitmap/app/src/test/java/com/dongnao/bitmapcompress/: ExampleUnitTest.java
producer/: settings.gradle
(+335 files in other folders)
